# conan-qr_code_generator

./: CMakeLists.txt  Pipfile  README.md  conandata.yml  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  test_qr_code_generator_package.c
